--- a/apps/gui/src/i18n/locales/en.json
+++ b/apps/gui/src/i18n/locales/en.json
@@ -12,6 +12,39 @@
         "stayTuned": "Stay tuned for updates!",
         "logout": "Logout"
     },
+    "settings": {
+        "title": "Settings",
+        "description": "Manage your app preferences and account settings.",
+        "sections": {
+            "appearance": "Appearance",
+            "language": "Language"
+        },
+        "theme": "Theme",
+        "themeLight": "Light",
+        "themeDark": "Dark",
+        "themeSystem": "System",
+        "language": "Language",
+        "languageSelect": "Select language",
+        "button": "Settings",
+        "tabs": {
+            "general": "General",
+            "account": "Account"
+        },
+        "account": {
+            "title": "GitHub Account",
+            "connectedVia": "Connected via GitHub",
+            "viewProfile": "View on GitHub",
+            "logout": "Logout",
+            "logoutConfirm": "Are you sure you want to logout?"
+        }
+    },
+    "profile": {
+        "githubAccount": "GitHub Account"
+    },
+    "sidebar": {
+        "appName": "Jujutsu Desktop",
+        "appTagline": "Version Control"
+    },
     "theme": {
         "light": "Light",
         "dark": "Dark",
