--- a/apps/gui/src/i18n/locales/en.json
+++ b/apps/gui/src/i18n/locales/en.json
@@ -43,7 +43,11 @@
     },
     "sidebar": {
         "appName": "Jujutsu Desktop",
-        "appTagline": "Version Control"
+        "appTagline": "Version Control",
+        "nav": {
+            "log": "Operation Log",
+            "changes": "Changes"
+        }
     },
     "theme": {
         "light": "Light",
@@ -93,6 +97,33 @@
             "notJJRepo": "The selected folder is not a jj repository.",
             "mismatch": "The repository does not match the original. Please select the correct repository."
         }
+    },
+    "operations": {
+        "title": "Operation Log",
+        "description": "Chronological history of operations in this repository. You can undo to a specific state.",
+        "undo": "Undo to this state",
+        "undoConfirm": "Are you sure you want to restore the repository to this operation?",
+        "undoSuccess": "Successfully undid the operation.",
+        "noHistory": "No operation history found.",
+        "id": "ID",
+        "time": "Time",
+        "user": "User",
+        "command": "Command"
+    },
+    "changes": {
+        "title": "Changes",
+        "noChanges": "No changes",
+        "changedFiles": "Changed Files",
+        "diff": "Diff",
+        "currentCommit": "Current Commit",
+        "status": {
+            "Added": "Added",
+            "Modified": "Modified",
+            "Removed": "Removed",
+            "Conflicted": "Conflicted"
+        },
+        "refreshing": "Refreshing...",
+        "selectFile": "Select a file to view diff"
     },
     "language": {
         "english": "English",
