--- a/apps/gui/src/i18n/locales/ko.json
+++ b/apps/gui/src/i18n/locales/ko.json
@@ -43,7 +43,11 @@
     },
     "sidebar": {
         "appName": "Jujutsu Desktop",
-        "appTagline": "버전 관리"
+        "appTagline": "버전 관리",
+        "nav": {
+            "log": "작업 기록",
+            "changes": "변경 사항"
+        }
     },
     "theme": {
         "light": "라이트",
@@ -93,6 +97,33 @@
             "notJJRepo": "선택한 폴더가 jj 저장소가 아닙니다.",
             "mismatch": "기존 저장소와 일치하지 않습니다. 올바른 저장소를 선택해 주세요."
         }
+    },
+    "operations": {
+        "title": "작업 기록 (Operation Log)",
+        "description": "저장소의 시간별 작업 내역입니다. 특정 시점으로 되돌릴 수 있습니다.",
+        "undo": "이 시점으로 되돌리기",
+        "undoConfirm": "해당 시점으로 저장소를 되돌리시겠습니까?",
+        "undoSuccess": "작업을 성공적으로 취소했습니다.",
+        "noHistory": "작업 기록이 없습니다.",
+        "id": "ID",
+        "time": "시간",
+        "user": "사용자",
+        "command": "명령어"
+    },
+    "changes": {
+        "title": "변경 사항",
+        "noChanges": "변경 사항이 없습니다",
+        "changedFiles": "변경된 파일",
+        "diff": "차이점",
+        "currentCommit": "현재 커밋",
+        "status": {
+            "Added": "추가됨",
+            "Modified": "수정됨",
+            "Removed": "삭제됨",
+            "Conflicted": "충돌"
+        },
+        "refreshing": "새로고침 중...",
+        "selectFile": "차이점을 보려면 파일을 선택하세요"
     },
     "language": {
         "english": "English",
